--- a/01/C_Module/public/css/sub.css
+++ b/01/C_Module/public/css/sub.css
@@ -1,4 +1,5 @@
-#sub-main-section {
+#sub-main-section,
+#sale-event {
     min-height: 520px;
     margin-top: 100px;
 }
@@ -45,3 +46,13 @@
 
 .user-info { cursor: default; flex-direction: column; }
 .user-info>span { font-size: 14px; }
+
+
+/* 할인 메뉴 페이지 */
+
+.breads {
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(4, 250px);
+    justify-content: center;
+}
