--- a/01/C_Module/public/css/style.css
+++ b/01/C_Module/public/css/style.css
@@ -9,7 +9,6 @@
 }
 
 * {
-    list-style: none;
     text-decoration: none;
     font-family: 'NotoSans-medium';
 }
@@ -34,7 +33,7 @@
 */
 
 h1, h2, h3, h4, h5, h6 { font-family: 'NotoSans-bold'; }
-ul { margin: 0; padding: 0; }
+ul { margin: 0; padding: 0; list-style: none; }
 a, a:hover { color: #252b2f; text-decoration: none; }
 .text-brown { color: #bb9356; }
 .btn-brown { background-color: #bb9356; color: #fff; }
